added EditingColor class that inherits from OutpostColor and carries name with it.  will make saving easier.  Also makes things simpler.

--- a/VoxtureEditor/VoxtureEditor.csproj
+++ b/VoxtureEditor/VoxtureEditor.csproj
@@ -57,6 +57,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="EditingColor.cs" />
     <Compile Include="EditingVoxture.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
