VoxtureEditor now loads and saves! Now it just needs file choosing.

--- a/VoxtureEditor/VoxtureEditor.csproj
+++ b/VoxtureEditor/VoxtureEditor.csproj
@@ -97,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="Content\basics.vox">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
