--- a/Outpost/Outpost.csproj
+++ b/Outpost/Outpost.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Chunk.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\PlayerFist.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="LuaBridge.cs" />
     <Compile Include="Screens\LoadingScreen.cs" />
     <Compile Include="Screens\PauseScreen.cs" />
@@ -112,6 +113,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
