--- a/Outpost/Outpost.csproj
+++ b/Outpost/Outpost.csproj
@@ -65,6 +65,9 @@
     <Content Include="Content\CubeShader.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\stones.vox">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
