--- a/OutpostLibrary/OutpostLibrary.csproj
+++ b/OutpostLibrary/OutpostLibrary.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Content\Material.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="Navigation\BlockAddress.cs" />
+    <Compile Include="Navigation\ChunkAddress.cs" />
     <Compile Include="Navigation\Navigation.cs" />
     <Compile Include="Pattern.cs" />
   </ItemGroup>
