--- a/Outpost/Outpost.csproj
+++ b/Outpost/Outpost.csproj
@@ -80,16 +80,12 @@
     <Compile Include="Map\LoadState.cs" />
     <Compile Include="Map\MapManager.cs" />
     <Compile Include="Map\MapSection.cs" />
-    <Compile Include="Screens\GameScreen.cs" />
-    <Compile Include="Screens\LoadingScreen.cs" />
-    <Compile Include="Screens\PauseScreen.cs" />
-    <Compile Include="Screens\ScreenManager.cs" />
+    <Compile Include="GameScreen.cs" />
     <Compile Include="Items\Tile.cs" />
     <Compile Include="GameShell.cs" />
     <Compile Include="Mapgen.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Screens\Screen.cs" />
     <Compile Include="SetLoader.cs" />
     <Compile Include="Map\MapStructure.cs" />
     <Compile Include="TopLevel.cs" />
@@ -121,6 +117,10 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Screens\" />
+  </ItemGroup>
+  <Import Project="..\ScreenManager\ScreenManager.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
