--- a/Outpost/packages.config
+++ b/Outpost/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MonoGame.Framework.WindowsGL" version="3.4.0.459" targetFramework="net45" />
   <package id="NeoLua" version="1.0.3" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
 </packages>
