--- a/Outpost/packages.config
+++ b/Outpost/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MonoGame.Framework.WindowsGL" version="3.4.0.459" targetFramework="net45" />
+  <package id="MonoGame.Framework.DesktopGL" version="3.6.0.1625" targetFramework="net45" />
   <package id="NeoLua" version="1.2.24" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
 </packages>
