--- a/Outpost/OutpostEngine.csproj
+++ b/Outpost/OutpostEngine.csproj
@@ -8,12 +8,13 @@
     <ProjectGuid>{AD0A4123-E6B4-47DA-B4EB-4204E4EB49C1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OutpostCore</RootNamespace>
-    <AssemblyName>OutpostCore</AssemblyName>
+    <RootNamespace>OutpostEngine</RootNamespace>
+    <AssemblyName>OutpostEngine</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>da896f5d</NuGetPackageImportStamp>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -26,7 +27,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -149,7 +149,7 @@
     <Compile Include="SetLoading\ISetLoader.cs" />
     <Compile Include="SetLoading\OldSetLoader.cs" />
     <Compile Include="Map\MapStructure.cs" />
-    <Compile Include="SetLoading\Registry.cs" />
+    <Compile Include="SetLoading\RegistryManager.cs" />
     <Compile Include="SetLoading\SetIdentifier.cs" />
     <Compile Include="TopLevel.cs" />
   </ItemGroup>
