--- a/OutpostLibrary/OutpostLibrary.csproj
+++ b/OutpostLibrary/OutpostLibrary.csproj
@@ -42,7 +42,6 @@
   <ItemGroup>
     <Compile Include="Content\OutpostColor.cs" />
     <Compile Include="Content\Voxture.cs" />
-    <Compile Include="mapV1.cs" />
     <Compile Include="Content\Material.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="Navigation\BlockAddress.cs" />
@@ -70,6 +69,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
